--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "@types/react-dom": "^17.0.11",
     "lodash": "^4.17.21",
     "luxon": "^2.3.0",
+    "next": "^12.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
@@ -26,7 +25,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "build-next": "next build",
+    "start-next": "next start"
   },
   "eslintConfig": {
     "extends": [
