update tsconfig to includes pages folder instead of src folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["src", "types"],
+  "include": ["types", "pages"],
   "exclude": ["node_modules"]
 }
